# mock-plutus-for-testing

./: .gitignore  README.md  cabal.project  hie.yaml  plutus-starter.cabal
.github/workflows/: test.yml
dump-script/: Main.hs  Options.hs
nix/: sources.json
nix/pkgs/haskell/: sha256map.nix
pab/: Main.hs  plutus-pab.template.yaml
src/: OffChain.hs  OnChain.hs  PAB.hs
